--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,25 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+  height: 100%;
   padding: 2rem;
   text-align: center;
+}
+
+#container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 800px){
+  #container{
+    display: grid;
+    grid-template-columns: 300px repeat(1, 1fr);
+    grid-template-areas: 
+    "navbar main"
+    ;
+  }
+  
 }
