--- a/src/styles/round.css
+++ b/src/styles/round.css
@@ -2,6 +2,22 @@
     color: green;
 }
 
+.quest-round{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem;
+}
+
+.task-button{
+    width: 100px;
+    padding: .5rem;
+    background-color: none;
+    box-shadow: 0 0 5px #fff;
+    cursor: pointer;
+}
+
 .answer-area{
     font-size: 2rem;
     max-width: 8rem;
@@ -11,4 +27,8 @@
     outline: none;
     text-align: center;
     box-shadow: 0 0 5px #fff;
+}
+
+.answer-info{
+    font-size: 2rem;
 }
