--- a/src/styles/round.css
+++ b/src/styles/round.css
@@ -10,8 +10,10 @@
     padding: 2rem;
 }
 
+
 .task-button{
     width: 100px;
+    margin: 10px;
     padding: .5rem;
     background-color: none;
     box-shadow: 0 0 5px #fff;
