--- a/src/styles/changeFraction.css
+++ b/src/styles/changeFraction.css
@@ -2,13 +2,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: green;
+    font-size: 2.5rem;
+    font-weight: 600;
 }
 
 .int-part{
-    font-size: 2rem;
+    font-size: 4rem;
     padding: .5rem;
 }
 
 .fraction-bar{
     border-bottom: #e0e0e0 2px solid;
+}
+
+.answer-area{
+    margin: 1rem auto 2rem;
 }
