--- a/src/styles/round.css
+++ b/src/styles/round.css
@@ -1,13 +1,16 @@
-.quest-data{
-    color: green;
-}
-
 .quest-round{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
     padding: 2rem;
+}
+
+.task-number{
+    font-size: 4rem;
+    font-family: 'Merienda', cursive;
+    color: #333333;
+    font-weight: 600;
 }
 
 
