--- a/src/styles/changeFraction.css
+++ b/src/styles/changeFraction.css
@@ -22,6 +22,16 @@
     border-bottom: #333333 2px solid;
 }
 
+.draft{
+    width: 250px;
+    align-self: center;
+    font-size: 2rem;
+    text-align: center;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
 .answer-area{
-    margin: 1rem auto 2rem;
+    margin: 1rem auto;
 }
