--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root {
   width: 100%;
-  height: 100%;
   padding: 2rem;
   text-align: center;
 }
@@ -11,15 +10,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.score{
+  position: fixed;
+  top: 10%;
+  font-size: 2rem;
+  font-family: 'Merienda', cursive;
 }
 
 @media screen and (min-width: 800px){
+
+  #root{
+    height: 100%;
+  }
+  
   #container{
     display: grid;
     grid-template-columns: 300px repeat(1, 1fr);
     grid-template-areas: 
     "navbar main"
     ;
+
+    .score{
+      position: fixed;
+      top: 10%;
+      right: 10%;
+  }
   }
   
 }
