--- a/src/styles/multiplyFractions.css
+++ b/src/styles/multiplyFractions.css
@@ -1,9 +1,21 @@
 .task-place{
+    width: 90%;
     background-color: #e5e5f7;
     opacity: 0.8;
     background-image:  linear-gradient(#444cf7 1px, transparent 1px), linear-gradient(to right, #444cf7 1px, #e5e5f7 1px);
     background-size: 20px 20px;
     color: black;
     align-self: center;
-    padding: 20px 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 1rem;
+}
+
+@media screen and (min-width: 800px){
+    .task-place{
+        width: 80%;
+        padding: 2rem;
+
+    }
 }
